# aether-fable

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
aether/: README.md  verify_all.sh
aetherlife/: config.py  telemetry.py
docs/: integration-ideas.md
scripts/: aggregate_c2.py  aggregate_topology.py  aggregate_v8c3.py  analyze_c2_mechanism.py  analyze_occupation_mobility.py  bench_v8b1.py  compare_ablation.py  compare_cost_curve.py  compare_good_seeds_ablation.py  diag_v7_longrun.py  inspect_replay.py  launch_gui.py  launch_gui_v2.py  launch_gui_v3.py  launch_gui_v8.py  metrics_report.py  multiseed_ablation.py  multiseed_v8b2.py  overnight_v8b1.py  prereg.py  probe_policies_v8.py  record_events_v8.py  render_policy_compare.py  render_v8.py  run_baseline.py  run_c2_affinity.ps1  run_c2_replication.ps1  run_p2_etouffement.ps1  run_p346_predictions.ps1  run_phase_d_resume.ps1  run_portfolio_topology.ps1  test_inheritance_isolated.py  train_dqn.py  train_v2_idqn.py  v2_density_sweep.py  v3_5_benchmark_mlp_vs_lstm.py  v3_6_benchmark_3way.py  v3_7_benchmark_ma_seasonal_complex.py  v5_2_benchmark_family.py  v5_3_benchmark_cache.py  (+1 more)
tests/: test_c2_affinity.py  test_discoveries_mobility.py  test_inspect_replay.py  test_live_report.py  test_live_viewer_v8.py  test_metrics_report.py  test_overnight_mobility_retention.py  test_policy_probe.py  test_prereg_cli.py  test_probe_policies_v8.py  test_pygame_viewer_v8.py  test_record_events_v8.py  test_spatial_mobility.py  test_telemetry.py  test_topology_generality.py  test_v8_replay.py
(+170 files in other folders)
